--- a/notebook/goulet.ipynb
+++ b/notebook/goulet.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "2        188  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "2                 URSINS           4        2224         22        NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,8 +463,7 @@
    "outputs": [],
    "source": [
     "communes_geom = gpd.read_file(file_communes_geom)\n",
-    "communes_geom = communes_geom.rename(str.lower, axis='columns')\n",
-    "communes_geom = communes_geom[['no_com_can', 'geometry']]"
+    "communes_geom = communes_geom.rename(str.lower, axis='columns')"
    ]
   },
   {
@@ -485,27 +484,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Merge communes and communes_data ###"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "communes = communes.append(communes_data)\n",
-    "communes = communes.drop(['geometry'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Merge communes and geometries ###"
+    "communes_geom = communes_geom['geometry']"
    ]
   },
   {
@@ -514,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "communes = communes.merge(communes_geom, on='no_com_can')"
+    "communes = gpd.GeoDataFrame(communes_data, geometry=communes_geom)"
    ]
   },
   {
@@ -526,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -565,40 +549,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>5535.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102</td>\n",
+       "      <td>5535</td>\n",
        "      <td>Saint-Barthélemy (VD)</td>\n",
        "      <td>SAINT-BARTHÉLEMY (VD)</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2223.0</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2223</td>\n",
+       "      <td>22</td>\n",
        "      <td>NaN</td>\n",
        "      <td>POLYGON ((2536799.038 1166156.651, 2536797.628...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>336.0</td>\n",
-       "      <td>5861.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>336</td>\n",
+       "      <td>5861</td>\n",
        "      <td>Rolle</td>\n",
        "      <td>ROLLE</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2228.0</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2228</td>\n",
+       "      <td>22</td>\n",
        "      <td>NaN</td>\n",
        "      <td>POLYGON ((2513913.773 1144416.026, 2513999.465...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>381.0</td>\n",
-       "      <td>5932.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>381</td>\n",
+       "      <td>5932</td>\n",
        "      <td>Ursins</td>\n",
        "      <td>URSINS</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2224.0</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2224</td>\n",
+       "      <td>22</td>\n",
        "      <td>NaN</td>\n",
        "      <td>POLYGON ((2541753.782 1177514.664, 2541835.857...</td>\n",
        "    </tr>\n",
@@ -608,14 +592,14 @@
       ],
       "text/plain": [
        "   ogc_fid  no_com_can  no_com_fed                nom_min  \\\n",
-       "0      1.0       102.0      5535.0  Saint-Barthélemy (VD)   \n",
-       "1      2.0       336.0      5861.0                  Rolle   \n",
-       "2      3.0       381.0      5932.0                 Ursins   \n",
+       "0        1         102        5535  Saint-Barthélemy (VD)   \n",
+       "1        2         336        5861                  Rolle   \n",
+       "2        3         381        5932                 Ursins   \n",
        "\n",
        "                 nom_maj  no_dis_can  no_dis_fed  no_canton  perimetre  \\\n",
-       "0  SAINT-BARTHÉLEMY (VD)         3.0      2223.0       22.0        NaN   \n",
-       "1                  ROLLE         8.0      2228.0       22.0        NaN   \n",
-       "2                 URSINS         4.0      2224.0       22.0        NaN   \n",
+       "0  SAINT-BARTHÉLEMY (VD)           3        2223         22        NaN   \n",
+       "1                  ROLLE           8        2228         22        NaN   \n",
+       "2                 URSINS           4        2224         22        NaN   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((2536799.038 1166156.651, 2536797.628...  \n",
@@ -623,7 +607,7 @@
        "2  POLYGON ((2541753.782 1177514.664, 2541835.857...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,30 +650,10 @@
     {
      "data": {
       "text/plain": [
-       "geopandas.geodataframe.GeoDataFrame"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(communes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
