add geometries to parcelles

--- a/notebook/db_propritaires.ipynb
+++ b/notebook/db_propritaires.ipynb
@@ -753,6 +753,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### check data ###"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
