Create notebook3 - find bounderies

--- a/notebook/goulet2.ipynb
+++ b/notebook/goulet2.ipynb
@@ -204,6 +204,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ogc_fid</th>\n",
+       "      <th>no_com_can</th>\n",
+       "      <th>no_com_fed</th>\n",
+       "      <th>nom_commune</th>\n",
+       "      <th>perimetre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>102</td>\n",
+       "      <td>5535</td>\n",
+       "      <td>Saint-Barthélemy (VD)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>336</td>\n",
+       "      <td>5861</td>\n",
+       "      <td>Rolle</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>381</td>\n",
+       "      <td>5932</td>\n",
+       "      <td>Ursins</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>258</td>\n",
+       "      <td>5745</td>\n",
+       "      <td>Baulmes</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>289</td>\n",
+       "      <td>5790</td>\n",
+       "      <td>Maracon</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>305</td>\n",
+       "      <td>96</td>\n",
+       "      <td>5529</td>\n",
+       "      <td>Oulens-sous-Echallens</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305</th>\n",
+       "      <td>306</td>\n",
+       "      <td>223</td>\n",
+       "      <td>5702</td>\n",
+       "      <td>Arzier-Le Muids</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>307</td>\n",
+       "      <td>162</td>\n",
+       "      <td>5629</td>\n",
+       "      <td>Clarmont</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>308</td>\n",
+       "      <td>239</td>\n",
+       "      <td>5718</td>\n",
+       "      <td>Genolier</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>309</td>\n",
+       "      <td>224</td>\n",
+       "      <td>5703</td>\n",
+       "      <td>Bassins</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>309 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ogc_fid  no_com_can  no_com_fed            nom_commune  perimetre\n",
+       "0          1         102        5535  Saint-Barthélemy (VD)        NaN\n",
+       "1          2         336        5861                  Rolle        NaN\n",
+       "2          3         381        5932                 Ursins        NaN\n",
+       "3          4         258        5745                Baulmes        NaN\n",
+       "4          5         289        5790                Maracon        NaN\n",
+       "..       ...         ...         ...                    ...        ...\n",
+       "304      305          96        5529  Oulens-sous-Echallens        2.0\n",
+       "305      306         223        5702        Arzier-Le Muids        NaN\n",
+       "306      307         162        5629               Clarmont        2.0\n",
+       "307      308         239        5718               Genolier        NaN\n",
+       "308      309         224        5703                Bassins        NaN\n",
+       "\n",
+       "[309 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "communes_vd_data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
