--- a/notebook/goulet3.ipynb
+++ b/notebook/goulet3.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Find owners of parcels by categories and plot #\n",
+    "\n",
+    "Find category of owners of all parcels with wish list csv file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Impot libraries #"
    ]
   },
@@ -25,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define files to read #"
+    "# Defintion of the files #"
    ]
   },
   {
@@ -64,7 +73,7 @@
     "# Other data\n",
     "\n",
     "file_communes_vd = '../data/communes_vd.csv'\n",
-    "file_which_list = '../data/mex_which_list.csv'"
+    "file_whish_list = '../data/mex_whish_list.csv'"
    ]
   },
   {
@@ -158,13 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load list of parcels sought and add columns\n",
     "\n",
-    "which_list = pd.read_csv(file_which_list)"
+    "whish_list = pd.read_csv(file_whish_list)"
    ]
   },
   {
@@ -176,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add new columns\n",
     "\n",
-    "which_list['IDEX2000'] = which_list['no_com'].map('{:0>3}'.format) + which_list['no_parc'].map('{:0>6}'.format)\n",
-    "which_list['IDEX2000'] = np.int64(which_list['IDEX2000'])"
+    "whish_list['IDEX2000'] = whish_list['no_com'].map('{:0>3}'.format) + whish_list['no_parc'].map('{:0>6}'.format)\n",
+    "whish_list['IDEX2000'] = np.int64(whish_list['IDEX2000'])"
    ]
   },
   {
@@ -195,11 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "which_list['fiche_id'] = which_list['no_com'].map(str) + \".\" + which_list['no_parc'].map(str)"
+    "whish_list['fiche_id'] = whish_list['no_com'].map(str) + \".\" + whish_list['no_parc'].map(str)"
    ]
   },
   {
@@ -211,11 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "which_list = pd.merge(which_list, communes_vd_data, how='left', on='no_com')"
+    "whish_list = pd.merge(whish_list, communes_vd_data, how='left', on='no_com')"
    ]
   },
   {
@@ -227,47 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fix values column proprietaire\n",
     "\n",
-    "which_list.proprietaire = which_list.proprietaire.str.replace(' [Ll]a [cC]ommune[, ]*.*', '', regex=True)\n",
-    "which_list.proprietaire = which_list.proprietaire.str.replace('St-', 'Saint-', regex=True)\n",
-    "which_list.proprietaire = which_list.proprietaire.str.replace(' s/', '-sur-', regex=True)"
+    "whish_list.proprietaire = whish_list.proprietaire.str.replace(' [Ll]a [cC]ommune[, ]*.*', '', regex=True)\n",
+    "whish_list.proprietaire = whish_list.proprietaire.str.replace('St-', 'Saint-', regex=True)\n",
+    "whish_list.proprietaire = whish_list.proprietaire.str.replace(' s/', '-sur-', regex=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert Ship list dataframe to geodataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert which_list to Geodataframe\n",
-    "\n",
-    "which_list = gpd.GeoDataFrame(which_list)\n",
-    "which_list['geometry'] = None\n",
-    "which_list = which_list.set_crs(crs=2056)\n",
-    "which_list = which_list.drop(['geometry'], axis=1)\n",
-    "which_list = pd.merge(which_list, parcels_shape, how='left', on='IDEX2000')\n",
-    "which_list = which_list.drop(['NUMERO'], axis=1)\n",
-    "which_list['centroid'] = which_list.centroid"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Define catageries of owners ##\n",
-    "code : 1 = commune 2 = confédération 3 = état 4 = autre"
+    "## Convert whish_list dataframe to geodataframe ##"
    ]
   },
   {
@@ -276,19 +260,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert which_list to Geodataframe\n",
+    "\n",
+    "whish_list = gpd.GeoDataFrame(whish_list)\n",
+    "whish_list['geometry'] = None\n",
+    "whish_list = whish_list.set_crs(crs=2056)\n",
+    "whish_list = whish_list.drop(['geometry'], axis=1)\n",
+    "whish_list = pd.merge(whish_list, parcels_shape, how='left', on='IDEX2000')\n",
+    "whish_list = whish_list.drop(['NUMERO'], axis=1)\n",
+    "whish_list['centroid'] = whish_list.centroid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definition of categories of owners #\n",
+    "code : 1 = commune 2 = confédération 3 = état 4 = autre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define catageries of owners\n",
     "# code : 1 = commune 2 = confédération 3 = état 4 = autre\n",
     "\n",
-    "which_list['code_owner'] = None\n",
-    "for index, row in which_list.iterrows():\n",
+    "whish_list['code_owner'] = None\n",
+    "for index, row in whish_list.iterrows():\n",
     "    if row['nom_commune'] == row['proprietaire'].split(\" \", 1)[0]:\n",
-    "        which_list.at[index,'code_owner'] = 1\n",
+    "        whish_list.at[index,'code_owner'] = 1\n",
     "    elif row['proprietaire'].split(\" \", 1)[0] == \"Confédération\":\n",
-    "        which_list.at[index,'code_owner'] = 2\n",
+    "        whish_list.at[index,'code_owner'] = 2\n",
     "    elif row['proprietaire'].split(\" \", 1)[0] == \"Etat\":\n",
-    "        which_list.at[index,'code_owner'] = 3\n",
+    "        whish_list.at[index,'code_owner'] = 3\n",
     "    else:\n",
-    "        which_list.at[index,'code_owner'] = 4"
+    "        whish_list.at[index,'code_owner'] = 4"
    ]
   },
   {
@@ -300,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -320,10 +336,10 @@
     "# Define layers\n",
     "\n",
     "layers = []\n",
-    "layers.append({'layer' : 'com', 'geom' : which_list.loc[which_list['code_owner']==1], 'color' : 'blue'})\n",
-    "layers.append({'layer' : 'conf', 'geom' : which_list.loc[which_list['code_owner']==2], 'color' : 'red'})\n",
-    "layers.append({'layer' : 'etat', 'geom' : which_list.loc[which_list['code_owner']==3], 'color' : 'green'})\n",
-    "layers.append({'layer' : 'autre', 'geom' : which_list.loc[which_list['code_owner']==4], 'color' : 'orange'})\n",
+    "layers.append({'layer' : 'com', 'geom' : whish_list.loc[whish_list['code_owner']==1], 'color' : 'blue'})\n",
+    "layers.append({'layer' : 'conf', 'geom' : whish_list.loc[whish_list['code_owner']==2], 'color' : 'red'})\n",
+    "layers.append({'layer' : 'etat', 'geom' : whish_list.loc[whish_list['code_owner']==3], 'color' : 'green'})\n",
+    "layers.append({'layer' : 'autre', 'geom' : whish_list.loc[whish_list['code_owner']==4], 'color' : 'orange'})\n",
     "\n",
     "alpha_value = 0.5\n",
     "\n",
@@ -331,7 +347,7 @@
     "for row in layers:\n",
     "    row['geom']['geometry'].plot(ax=ax, facecolor=row['color'], alpha=alpha_value)\n",
     "\n",
-    "which_list['centroid'].plot(ax=ax, facecolor='red')\n",
+    "whish_list['centroid'].plot(ax=ax, facecolor='red')\n",
     "cx.add_basemap(ax=ax, crs=2056, source=cx.providers.Stamen.TonerLite)\n",
     "\n",
     "#for x, y, label in zip(which_list['centroid'].x, which_list['centroid'].y, which_list['fiche_id']):\n",
@@ -347,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +374,7 @@
     "        gdf_tf = row['geom'].drop(['centroid'], axis=1)\n",
     "        gdf_tf.to_file(\"../data/\" + prefix_file_name + \"_\" + row['layer'] + \".shp\")\n",
     "        \n",
-    "cent_tf = gpd.GeoDataFrame(which_list[['fiche_id', 'centroid']])\n",
+    "cent_tf = gpd.GeoDataFrame(whish_list[['fiche_id', 'centroid']])\n",
     "cent_tf = cent_tf.rename(columns={\"centroid\": \"geometry\"})\n",
     "cent_tf.to_file(\"../data/\" + prefix_file_name + \"_cent.shp\")"
    ]
